--- a/src/dna.tex
+++ b/src/dna.tex
@@ -12,3 +12,131 @@ Any pause mode must surely be in need of a pause mode.
 \caption{The first screen paint in DNA. There are 24 raster interrupts allowing us to paint a long chain of sprites.}
 \end{figure}
 
+\begin{figure}[H]
+  {
+    \setlength{\tabcolsep}{1.0pt}
+    \setlength\cmidrulewidth{\heavyrulewidth} % Make cmidrule = 
+    \begin{adjustbox}{width=14cm,center}
+      \begin{tabular}{ccccccc}
+        \toprule
+        Sprite0 & Sprite1 & Sprite2 & Sprite3 & Sprite4 & Sprite5 & Sprite6 \\
+        \midrule
+\makecell[l]{
+	\begin{subfigure}{0.3\textwidth}
+    \def\MULTICOLORONE{gray}
+    \def\MULTICOLORTWO{black}
+    \def\SPRITECOLOR{yellow}
+		\input{sprites/BIG_I}
+	\end{subfigure}
+} &
+\makecell[l]{
+	\begin{subfigure}{0.3\textwidth}
+    \def\MULTICOLORONE{gray}
+    \def\MULTICOLORTWO{black}
+    \def\SPRITECOLOR{green}
+		\input{sprites/BIG_R}
+	\end{subfigure}
+} &
+\makecell[l]{
+	\begin{subfigure}{0.3\textwidth}
+    \def\MULTICOLORONE{gray}
+    \def\MULTICOLORTWO{black}
+    \def\SPRITECOLOR{lightblue}
+		\input{sprites/BIG_I}
+	\end{subfigure}
+} &
+\makecell[l]{
+	\begin{subfigure}{0.3\textwidth}
+    \def\MULTICOLORONE{gray}
+    \def\MULTICOLORTWO{black}
+    \def\SPRITECOLOR{purple}
+		\input{sprites/BIG_D}
+	\end{subfigure}
+} &
+\makecell[l]{
+	\begin{subfigure}{0.3\textwidth}
+    \def\MULTICOLORONE{gray}
+    \def\MULTICOLORTWO{black}
+    \def\SPRITECOLOR{blue}
+		\input{sprites/BIG_I}
+	\end{subfigure}
+} &
+\makecell[l]{
+	\begin{subfigure}{0.3\textwidth}
+    \def\MULTICOLORONE{gray}
+    \def\MULTICOLORTWO{black}
+    \def\SPRITECOLOR{gray}
+		\input{sprites/IG_S}
+	\end{subfigure}
+} &
+\makecell[l]{
+	\begin{subfigure}{0.3\textwidth}
+    \def\MULTICOLORONE{gray}
+    \def\MULTICOLORTWO{gray}
+    \def\SPRITECOLOR{gray}
+		\input{sprites/ALPHA}
+	\end{subfigure}
+} \\ 
+        \midrule
+\makecell[l]{
+	\begin{subfigure}{0.3\textwidth}
+    \def\MULTICOLORONE{gray}
+    \def\MULTICOLORTWO{white}
+    \def\SPRITECOLOR{red}
+		\input{sprites/LAND_GILBY1}
+	\end{subfigure}
+} & 
+\makecell[l]{
+	\begin{subfigure}{0.3\textwidth}
+    \def\MULTICOLORONE{gray}
+    \def\MULTICOLORTWO{white}
+    \def\SPRITECOLOR{red}
+		\input{sprites/LAND_GILBY2}
+	\end{subfigure}
+} & 
+\makecell[l]{
+	\begin{subfigure}{0.3\textwidth}
+    \def\MULTICOLORONE{gray}
+    \def\MULTICOLORTWO{white}
+    \def\SPRITECOLOR{orange}
+		\input{sprites/LAND_GILBY3}
+	\end{subfigure}
+} & 
+\makecell[l]{
+	\begin{subfigure}{0.3\textwidth}
+    \def\MULTICOLORONE{gray}
+    \def\MULTICOLORTWO{white}
+    \def\SPRITECOLOR{yellow}
+		\input{sprites/LAND_GILBY4}
+	\end{subfigure}
+} & 
+\makecell[l]{
+	\begin{subfigure}{0.3\textwidth}
+    \def\MULTICOLORONE{gray}
+    \def\MULTICOLORTWO{white}
+    \def\SPRITECOLOR{green}
+		\input{sprites/LAND_GILBY5}
+	\end{subfigure}
+} & 
+\makecell[l]{
+	\begin{subfigure}{0.3\textwidth}
+    \def\MULTICOLORONE{gray}
+    \def\MULTICOLORTWO{white}
+    \def\SPRITECOLOR{lightblue}
+		\input{sprites/LAND_GILBY6}
+	\end{subfigure}
+} & 
+\makecell[l]{
+	\begin{subfigure}{0.3\textwidth}
+    \def\MULTICOLORONE{gray}
+    \def\MULTICOLORTWO{white}
+    \def\SPRITECOLOR{purple}
+		\input{sprites/LAND_GILBY7}
+	\end{subfigure}
+} \\ 
+        \addlinespace
+        \bottomrule
+      \end{tabular}
+    \end{adjustbox}
+  }\caption{The sprites used by the top half of the screen and the bottom half of the screen.}
+\end{figure}
