--- a/notebooks/DNA - Plot the Eyeballs.ipynb
+++ b/notebooks/DNA - Plot the Eyeballs.ipynb
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,11 @@
     "\n",
     "    img = img.crop((crop_left - 10, 0, \n",
     "                    crop_right + 30, img.height))\n",
-    "    img.save(f'dna/initial/frame{frame}.png')\n"
+    "    img.save(f'dna/initial/frame{frame}.png')\n",
+    "    \n",
+    "    ofile = open(f'dna/initial/frame{frame}.tex','w')\n",
+    "    array_txt = ','.join([f\"${hex(v)[2:].upper().zfill(2)}\" for v in xpos_array])\n",
+    "    ofile.write(array_txt)\n"
    ]
   },
   {
