--- a/src/dna.tex
+++ b/src/dna.tex
@@ -96,7 +96,7 @@ This very quickly fills the array.  We can see this in operation from the below
 snippet in \icode{DNA\_MainAnimationRoutine}. In order to calculate the x position
 for the right hand chain, it shows the value in
 \icode{dnaCurrentPhase} being added to the value
-\icode{dnaCurrentSpritesPosArrayIndex} to pick out a value in
+\icode{dnaCurrent\-SpritesPosArrayIndex} to pick out a value in
 \icode{dnaSpritesXPositionsArray} offset by the amount of the 'Phase' setting:
 
 \begin{minipage}[b]{0.75\linewidth}
